--- a/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
+++ b/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
@@ -11,8 +11,9 @@
     <p>Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho do seu navegador.</p>
 
     <picture>
-        <source media="(min-width: )" srcset="">
-        <source media="(max-width: 1050)" srcset="imagens/M.png">
+        <source media="(max-width: 750px)" srcset="imagens/P.png">
+        <!-- > Imagens menores ficam acima hierarquicamente. -->>
+        <source media="(max-width: 1050px)" srcset="imagens/M.png">
         <img src="Imagens/G.png" alt="Imagem flexível">
     </picture>
 </body>
