--- a/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
+++ b/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
@@ -12,7 +12,7 @@
 
     <picture>
         <source media="(max-width: 750px)" srcset="imagens/P.png">
-        <!-- > Imagens menores ficam acima hierarquicamente. -->>
+        <!-- > Imagens menores ficam acima hierarquicamente. -->
         <source media="(max-width: 1050px)" srcset="imagens/M.png">
         <img src="Imagens/G.png" alt="Imagem flexível">
     </picture>
