--- a/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
+++ b/HTML_CSS/Módulo 001/Exercícios/Exercício 011/index.html
@@ -16,5 +16,14 @@
         <source media="(max-width: 1050px)" srcset="imagens/M.png">
         <img src="Imagens/G.png" alt="Imagem flexível">
     </picture>
+    <h1>Reproduzindo Áudio</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5</p>
+    <audio preload="metadata" autoplay loop>
+        <!-- Todos os parâmetros utilizados na tag audio são opcionais. -->
+        <source src="midia/guanacast-33.mp3" type="mpeg">
+        <source src="midia/guanacast-33.ogg" type="ogg">
+        <source src="midia/guanacast-33.wav" type="wav">
+        <p>Infelizmente o seu navegador não consegue reproduzir áudio. <a href="midia/guanacast-33.mp3">Clique aqui para baixar o arquivo MP3.</a></p>
+    </audio>
 </body>
 </html>
