--- a/HTML_CSS/Modulo 002/ex019/seletor01.html
+++ b/HTML_CSS/Modulo 002/ex019/seletor01.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="principal">Criando sites com HTML e CSS</h1>
+    <h1 id="principal" class="destaque">Criando sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel cumque debitis aliquid in eum, facere omnis eveniet repellendus accusamus, at fugit magnam veritatis facilis laudantium eaque quae? Autem, a consectetur!</p>
-    <h2>HTML intermediário</h2>
+    <h2 class="basico">HTML básico</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="basico">Vel cumque debitis aliquid</span>eum, facere omnis eveniet repellendus accusamus, at fugit magnam veritatis facilis laudantium eaque quae? Autem, a consectetur!</p>
+    <h2 class="intermediario">HTML intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi doloribus architecto deserunt dolorem labore provident fugit quaerat ab, quia eum? Commodi dicta at, officia ullam excepturi explicabo illo natus veniam?</p>
-    <h2>HTML avançado</h2>
+    <h2 class="avancado">HTML avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil temporibus molestiae similique itaque eaque quos qui molestias? Voluptatum reprehenderit quae dolorem suscipit perspiciatis adipisci. Quidem illum iste ipsum delectus ipsa?</p>
-    <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h1 class="destaque">Aprendendo CSS</h1>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias adipisci animi iusto! Non adipisci soluta commodi iste illo natus minus, architecto, ipsa ad deleniti corrupti laudantium nam! Aliquam, vel id.</p>
-    <h2>CSS intermediário</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint nesciunt aspernatur, accusantium eos ut neque! Aspernatur molestias, et, fuga architecto delectus quae eos nemo libero saepe animi iure veniam.</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avancado destaque">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, consequatur consequuntur sed ipsa atque alias veritatis error ducimus praesentium voluptate repellendus quasi necessitatibus, voluptates enim ipsum, odit aut a facere?</p>
 </body>
 </html>
