--- a/HTML_CSS/Modulo003/ex022/fundo006.html
+++ b/HTML_CSS/Modulo003/ex022/fundo006.html
@@ -29,9 +29,26 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel reprehenderit modi tempora labore eligendi cupiditate iusto laudantium perferendis, fuga expedita suscipit perspiciatis, sint animi. Possimus voluptatem enim mollitia error?
-        Aspernatur adipisci, placeat quia autem hic at blanditiis porro nemo molestiae veritatis, odit, accusamus tempora beatae odio velit. Accusamus obcaecati atque modi eos eveniet molestias ipsam iste culpa distinctio delectus?
-        Iusto saepe delectus voluptatem cum nesciunt, impedit, harum eligendi magnam nihil nisi eos quas necessitatibus! Laboriosam, autem. Consectetur quibusdam aspernatur odio doloribus nemo quia nobis alias a ratione! Fugiat, quod?</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel reprehenderit modi tempora labore eligendi cupiditate iusto laudantium perferendis, fuga expedita suscipit perspiciatis, sint animi. Possimus voluptatem enim mollitia error?
+            Aspernatur adipisci, placeat quia autem hic at blanditiis porro nemo molestiae veritatis, odit, accusamus tempora beatae odio velit. Accusamus obcaecati atque modi eos eveniet molestias ipsam iste culpa distinctio delectus?
+            Iusto saepe delectus voluptatem cum nesciunt, impedit, harum eligendi magnam nihil nisi eos quas necessitatibus! Laboriosam, autem. Consectetur quibusdam aspernatur odio doloribus nemo quia nobis alias a ratione! Fugiat, quod?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel reprehenderit modi tempora labore eligendi cupiditate iusto laudantium perferendis, fuga expedita suscipit perspiciatis, sint animi. Possimus voluptatem enim mollitia error?
+            Aspernatur adipisci, placeat quia autem hic at blanditiis porro nemo molestiae veritatis, odit, accusamus tempora beatae odio velit. Accusamus obcaecati atque modi eos eveniet molestias ipsam iste culpa distinctio delectus?
+            Iusto saepe delectus voluptatem cum nesciunt, impedit, harum eligendi magnam nihil nisi eos quas necessitatibus! Laboriosam, autem. Consectetur quibusdam aspernatur odio doloribus nemo quia nobis alias a ratione! Fugiat, quod?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel reprehenderit modi tempora labore eligendi cupiditate iusto laudantium perferendis, fuga expedita suscipit perspiciatis, sint animi. Possimus voluptatem enim mollitia error?
+            Aspernatur adipisci, placeat quia autem hic at blanditiis porro nemo molestiae veritatis, odit, accusamus tempora beatae odio velit. Accusamus obcaecati atque modi eos eveniet molestias ipsam iste culpa distinctio delectus?
+            Iusto saepe delectus voluptatem cum nesciunt, impedit, harum eligendi magnam nihil nisi eos quas necessitatibus! Laboriosam, autem. Consectetur quibusdam aspernatur odio doloribus nemo quia nobis alias a ratione! Fugiat, quod?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel reprehenderit modi tempora labore eligendi cupiditate iusto laudantium perferendis, fuga expedita suscipit perspiciatis, sint animi. Possimus voluptatem enim mollitia error?
+            Aspernatur adipisci, placeat quia autem hic at blanditiis porro nemo molestiae veritatis, odit, accusamus tempora beatae odio velit. Accusamus obcaecati atque modi eos eveniet molestias ipsam iste culpa distinctio delectus?
+            Iusto saepe delectus voluptatem cum nesciunt, impedit, harum eligendi magnam nihil nisi eos quas necessitatibus! Laboriosam, autem. Consectetur quibusdam aspernatur odio doloribus nemo quia nobis alias a ratione! Fugiat, quod?
+        </p>
     </main>
 </body>
 </html>
