--- a/HTML_CSS/desafios/desafio_12/cordel.html
+++ b/HTML_CSS/desafios/desafio_12/cordel.html
@@ -94,7 +94,7 @@
     </section>
 
     <footer>
-        <p>Site Criado por <a target="_blank" href="https://gustavoguanabara.github.io">Gustavo Guanabara</a> para o <a target="_blank" href="https://www.cursoemvideo.com">cursoemvideo</a> e recriado por <a target="_blank" href="https://github.com/augusto404">Augusto404</a> para fins de estudo.</p>
+        <p>Site criado por <a target="_blank" href="https://gustavoguanabara.github.io">Gustavo Guanabara</a> para o <a target="_blank" href="https://www.cursoemvideo.com">cursoemvideo</a> e recriado por <a target="_blank" href="https://github.com/augusto404">Augusto404</a> para fins de estudo.</p>
     </footer>
 </body>
 </html>
