--- a/HTML_CSS/desafios/desafio_10/android.html
+++ b/HTML_CSS/desafios/desafio_10/android.html
@@ -44,7 +44,7 @@
                 <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid.">
             </picture>
 
-            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong> mascote do Android.</p>
+            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
             <img class="pequena" src="imagens/bugdroid.png" alt="Bugdroid">
 
@@ -75,7 +75,7 @@
                     <li>8.0 - <abbr title="Oreo">Oreo</abbr>
                     <li>9.0 - <abbr title="Torta">Pie</abbr>
                 </ul>
-                <p>Infelizmente, o <strong>Android Q</strong>, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
+                <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
                 
                 <p>Acesse aqui o site <a href="https://www.android.com/intl/pt_pt/history/" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </aside>
@@ -84,7 +84,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a> e recriado por <a href="https://github.com/augusto404" target="_blank">Augusto404</a> para fins de estudo.</p>
     </footer>
 </body>
 </html>
