--- a/HTML_CSS/Modulo003/ex023/tabela001.html
+++ b/HTML_CSS/Modulo003/ex023/tabela001.html
@@ -13,19 +13,19 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td {
             border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.linha {
-            background-color: gray;
-        }
-
-        td.dado {
-            background-color: yellow;
+        td.numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -37,27 +37,21 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!-- Segunda linha -->
+        <tr> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha -->
             <td>D1</td>
-            <td class="dado">D2</td>
+            <td>D2</td>
             <td>D3</td>
         </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
         </tr>
     </table>
 </body>
