--- a/HTML_CSS/Modulo003/ex023/tabela002.html
+++ b/HTML_CSS/Modulo003/ex023/tabela002.html
@@ -64,9 +64,9 @@
         <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População (2021)</th>
-                <th>Porcentagem</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População (2021)</th>
+                <th scope="col">Porcentagem</th>
             </tr>
         </thead>
         <tbody>
@@ -208,7 +208,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>214 191 287</strong></td>
             </tr>
         </tfoot>
