--- a/HTML_CSS/Modulo003/ex023/tabela005.html
+++ b/HTML_CSS/Modulo003/ex023/tabela005.html
@@ -26,6 +26,10 @@
             border: 1px solid black;
             padding: 8px;
         }
+
+        tr.destaque {
+            background-color: chartreuse;
+        }
     </style>
 </head>
 <body>
@@ -52,7 +56,7 @@
             <td>Programador</td>
         </tr>
         <tr>
-            <td>Gustavo</td>
+            <td class="destaque">Gustavo</td>
             <td>M</td>
             <td>42</td>
             <td>Professor</td>
@@ -63,7 +67,7 @@
             <td>19</td>
             <td>Vendedor</td>
         </tr>
-        <tr>
+        <tr class="destaque">
             <td>Maria</td>
             <td>F</td>
             <td>39</td>
