--- a/HTML_CSS/Modulo003/ex023/tabela005.html
+++ b/HTML_CSS/Modulo003/ex023/tabela005.html
@@ -35,7 +35,7 @@
             background-color: chartreuse;
         }
 
-        col.csexo {
+        col.cgrupo {
             background-color: yellow;
         }
     </style>
@@ -46,8 +46,7 @@
     <table>
         <colgroup>
             <col class="cnome">
-            <col class="csexo">
-            <col class="cidade">
+            <col class="cgrupo" span="2">
             <col class="cprof">
         </colgroup>
         <caption>Cadastro</caption>
