--- a/HTML_CSS/Modulo003/ex023/tabela005.html
+++ b/HTML_CSS/Modulo003/ex023/tabela005.html
@@ -27,16 +27,12 @@
             padding: 8px;
         }
 
-        .destaque {
-            background-color: chartreuse;
-        }
-
-        col.cnome {
-            background-color: chartreuse;
-        }
-
-        col.cgrupo {
+        .amarelo {
             background-color: yellow;
+        }
+
+        .vermelho {
+            background-color: red;
         }
     </style>
 </head>
@@ -45,9 +41,10 @@
 
     <table>
         <colgroup>
-            <col class="cnome">
-            <col class="cgrupo" span="2">
-            <col class="cprof">
+            <col class="amarelo">
+            <col class="vermelho">
+            <col class="amarelo">
+            <col class="vermelho">
         </colgroup>
         <caption>Cadastro</caption>
         <tr>
