--- a/JavaScript/aula004/ex001.html
+++ b/JavaScript/aula004/ex001.html
@@ -22,8 +22,9 @@
     <p>Já me livrei da maldição!!!</p>
 
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
+        window.alert('Minha primeira mensagem!') // janela simples
+        window.confirm('Está gostando de JS?') // janela de confirmação
+        window.prompt('Qual é seu nome?') // caixa de texto
     </script>
 </body>
 </html>
