--- a/JavaScript/aula006/ex003.html
+++ b/JavaScript/aula006/ex003.html
@@ -25,7 +25,8 @@
         var n1 = Number(window.prompt('Digite um número: '))
         var n2 = Number(window.prompt('Digite outro número: '))
         var soma = n1 + n2
-        window.alert('A soma dos valores é ' + soma)
+        window.alert('A soma dos valores é ' + String(soma))
+        // Pode ser feito soma.toString(), também.
     </script>
 </body>
 </html>
