--- a/JavaScript/aula010/ex006.html
+++ b/JavaScript/aula010/ex006.html
@@ -18,17 +18,22 @@
     </style>
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()"> <!-- Ao clicar, execute a função clicar()-->
+    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"> <!-- Ao clicar, execute a função clicar()-->
         Interaja...
     </div>
     <script>
+        var area = document.getElementById('area')
+
         function clicar() {
-            var area = document.getElementById('area')
             area.innerText = 'Clicou!'
         }
 
         function entrar() {
-            var 
+            area.innerText = 'Entrou!'
+        }
+
+        function sair() {
+            area.innerText = 'Saiu!'
         }
     </script>
 </body>
