--- a/JavaScript/aula010/ex006.html
+++ b/JavaScript/aula010/ex006.html
@@ -26,6 +26,7 @@
 
         function clicar() {
             area.innerText = 'Clicou!'
+            area.style.background = 'red'
         }
 
         function entrar() {
@@ -34,6 +35,7 @@
 
         function sair() {
             area.innerText = 'Saiu!'
+            area.style.background = 'rebeccapurple'
         }
     </script>
 </body>
