--- a/JavaScript/aula011/ex011.html
+++ b/JavaScript/aula011/ex011.html
@@ -49,12 +49,15 @@
             justify-content: center;
         }
 
-        main > div > #pais, div {
+        main > div > #pais, #container {
             margin: 20px;
         }
 
+        
+
         #pais, #checar {
             padding: 10px;
+            margin: 5px;
             border: none;
             border-radius: 8px;
 
@@ -67,6 +70,11 @@
             background-color: blueviolet;
             color: white;
             transition-duration: 0.3s;
+        }
+
+        #container {
+            display: flex;
+            justify-content: center;
         }
 
         strong {
@@ -89,8 +97,10 @@
     </header>
     <main>
         <div>
-            <input type="text" value="Digite aqui..." name="pais" id="pais">
-            <input type="button" value="Checar" id="checar" onclick="check()">
+            <div id="container">
+                <input type="text" value="Digite aqui..." name="pais" id="pais">
+                <input type="button" value="Checar" id="checar" onclick="check()">
+            </div>
             <div id="resultado">Clique no botão <strong>Checar</strong> e a resposta aparecerá aqui.</div>
         </div>
     </main>
