--- a/JavaScript/aula012-exercicios/ex014/hora-do-dia.html
+++ b/JavaScript/aula012-exercicios/ex014/hora-do-dia.html
@@ -7,17 +7,13 @@
     <title>Hora do dia &#x1F305;</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="hora_do_dia()">
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div id="msg">
-            testando
-        </div>
-        <div id="imagem">
-            <img src="manha_.jpg" alt="">
-        </div>
+        <div id="msg"></div>
+        <div id="imagem"></div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
