--- a/JavaScript/aula014ex/ex016/modelo.html
+++ b/JavaScript/aula014ex/ex016/modelo.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Contador</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Tittle</h1>
+        <h1>Contador Automático</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div id="container">
+            <div>
+                <p>Início: </p>
+                <input type="number" name="Inicio" id="inicio">
+            </div>
+            <div>
+                <p>Fim: </p>
+                <input type="number" name="Fim" id="fim">
+            </div>
+            <div>
+                <p>Passo: </p>
+                <input type="number" name="Passo" id="passo">
+            </div>
+        </div>
+        <div id="cont">
+            <input type="button" value="Contar" onclick="tabuada()" id="contar">
+        </div>
+        <div id="result">
+            O resultado deverá aparecer aqui...
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
