--- a/JavaScript/aula014ex/ex017/modelo.html
+++ b/JavaScript/aula014ex/ex017/modelo.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Tittle</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div id="container">
+            <p>Número: </p>
+            <input type="number" name="numero" id="numero">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()">
+        </div>
+        <div>
+            <output id="saida"></output>
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
