--- a/JavaScript/aula014ex/ex016/modelo.html
+++ b/JavaScript/aula014ex/ex016/modelo.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div id="cont">
-            <input type="button" value="Contar" onclick="tabuada()" id="contar">
+            <input type="button" value="Contar" id="contar" onclick="tabuada()">
         </div>
         <div id="result">
             O resultado deverá aparecer aqui...
