--- a/JavaScript/aula014ex/ex017/modelo.html
+++ b/JavaScript/aula014ex/ex017/modelo.html
@@ -18,7 +18,7 @@
             <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </div>
         <div>
-            <output id="saida"></output>
+            <select name="saida" id="saida" size="10"></select> <!-- O size tem que ser definido independe de qualquer configuração que for feita nas CSS -->
         </div>
     </section>
     <footer>
