--- a/JavaScript/aula016ex/ex018/modelo.html
+++ b/JavaScript/aula016ex/ex018/modelo.html
@@ -12,13 +12,12 @@
         <h1>Analisador de Números</h1>
     </header>
     <section>
-        <div id="flex01">
-            <p>Número (entre 0 e 100): </p>
-            <input type="number" name="numero" id="numero">
-            <input type="button" value="Adicionar">
+        <div class="flex">
+            <p>Número (entre 0 e 100): <input type="number" name="numero" id="numero" placeholder="Digite um número"></p>
+            <input type="button" value="Adicionar" id="adicionar">
         </div>
-        <div id="flex02">
-            <select name="saida" id="saida" size="10"></select>
+        <div class="flex">
+            <abbr title="O resultado aparecerá aqui."><select name="saida" id="saida" size="10"></select></abbr>
             <input type="button" value="Finalizar" onclick="analise()">
         </div>
     </section>
