segundo desafio do modulo de JS

--- a/rocketseat/discover_trilha-fundamentar/desafios_exercicios/desafios.html
+++ b/rocketseat/discover_trilha-fundamentar/desafios_exercicios/desafios.html
@@ -18,7 +18,7 @@
         }
     </style>
 
-    <script src="notasEscolares.js" defer></script>
+    <script src="FluxoDeCaixaFamiliar.js" defer></script>
 </head>
 <body>
     <h1>Atenção</h1>
